gut project and setup new base project

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -6,9 +6,10 @@
     <a href="/privacy-policy">Privacy Policy</a>
     <a href="/terms-conditions">Terms & Conditions</a>
   </div>
-  <div class="footer-links">
+  <!-- <div class="footer-links">
     <a href="#"><img class="footer-twitter-icon icons" src="../../../images/twitter.png"></a>
     <a href="#"><img class="footer-instagram-icon icons" src="../../../images/instagram.png"></a>
     <a href="#"><img class="footer-facebook-icon icons" src="../../../images/facebook.png"></a>
-  </div>
+  </div> -->
 </div>
+<script type="text/javascript" src="/script.js"></script>
