--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -1,4 +1,19 @@
 <div class="nav">
-  <a class="nav-link" href="/sign-up">Sign Up</a>
-  <a class="nav-link" href="/login">Log In</a>
+  <button class="nav-link">Sign Up</a>
+  <button class="nav-link login">Log In</a>
+</div>
+
+<!-- The Modal -->
+<div class="modal">
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <form>
+      <input type="text" placeholder="email" name="email">
+      <br>
+      <br>
+      <input type="text" placeholder="passowrd" name="password">
+    </form>
+  </div>
+
 </div>
