--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,67 +9,21 @@ body {
   flex: 1;
 }
 
-* {box-sizing:border-box}
+* {
+  box-sizing:border-box;
+}
 
-/* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
 }
 
-/* Hide the images by default */
 .mySlides {
     display: none;
 }
 
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-}
 
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
 .dot {
   cursor:pointer;
   height: 15px;
@@ -85,23 +39,6 @@ body {
   background-color: #717171;
 }
 
-/* Fading animation */
-/*.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}*/
 
 .slide-image {
   height: 400px;
@@ -116,11 +53,11 @@ body {
   font-family: 'Lato', sans-serif;
   font-size: 55px;
   font-weight: 900;
-  color: #8E9AAF !important;
+  color: #000 !important;
 }
 
 .nav {
-  background-color: #44455B;
+  background-color: #000;
   height: 30px;
   display:flex;
   /*-webkit-justify-content: flex-end;*/
@@ -131,7 +68,7 @@ body {
   font-family: 'Lato', sans-serif;
   font-size: 16px;
   font-weight: light;
-  color: #CE577C;
+  color: #000;
   margin-right: 25px;
 }
 
@@ -156,11 +93,50 @@ body {
 }
 
 .footer {
-  background-color: #44455B;
+  background-color: #000;
   height: 30px;
 }
 
 .icons {
   height: 15px;
   width: 15px;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4);
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #000;
+    margin: 15% auto;
+    padding: 20px;  
+    border: 1px solid #888;
+    width: 80%;
+    height:70%
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
