--- a/src/views/terms-of-service.ejs
+++ b/src/views/terms-of-service.ejs
@@ -1,3 +1,4 @@
 <% include partials/splash-header %>
-<button><a href="/auth/facebook">LOGIN</a></button>
+<h1>Terms of Service</h1>
+
 <% include partials/footer %>
