add modals for login and signup

--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -1,10 +1,10 @@
 <div class="nav">
-  <button class="nav-link">Sign Up</a>
-  <button class="nav-link login">Log In</a>
+  <button class="nav-link signup-button">Sign Up</a>
+  <button class="nav-link login-button">Log In</a>
 </div>
 
-<!-- The Modal -->
-<div class="modal">
+<!-- LOGIN Modal -->
+<div class="login-modal">
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
@@ -12,8 +12,21 @@
       <input type="text" placeholder="email" name="email">
       <br>
       <br>
-      <input type="text" placeholder="passowrd" name="password">
+      <input type="password" placeholder="passowrd" name="password">
     </form>
   </div>
+</div>
 
+<!-- SIGNUP Modal -->
+<div class="signup-modal">
+  <!-- Modal content -->
+  <div class="signup-modal-content">
+    <span class="close-signup-modal">&times;</span>
+    <form>
+      <input type="text" placeholder="email" name="email">
+      <br>
+      <br>
+      <input type="password" placeholder="passowrd" name="password">
+    </form>
+  </div>
 </div>
