--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,8 +60,7 @@ body {
   background-color: #000;
   height: 30px;
   display:flex;
-  /*-webkit-justify-content: flex-end;*/
-   justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 .nav-link {
@@ -86,11 +85,11 @@ body {
   height: 200px;
   width: 100%;
 }
-
+/*
 .cities {
   font-size: 72px;
   text-align: center;
-}
+} */
 
 .footer {
   background-color: #000;
@@ -102,25 +101,45 @@ body {
   width: 15px;
 }
 
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+/*  MODAL */
+.login-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
+    width: 100%;
+    height: 100%;
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4);
 }
 
-/* Modal Content/Box */
+.signup-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4);
+}
+
 .modal-content {
     background-color: #000;
     margin: 15% auto;
-    padding: 20px;  
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    height:70%
+}
+.signup-modal-content {
+    background-color: red;
+    margin: 15% auto;
+    padding: 20px;
     border: 1px solid #888;
     width: 80%;
     height:70%
@@ -134,8 +153,17 @@ body {
     font-weight: bold;
 }
 
+.close-signup-modal {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
 .close:hover,
-.close:focus {
+.close-signup-modal:hover,
+.close:focus,
+.close-signup-modal:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
