un-abstract routes and db modules into authentication

--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -8,11 +8,14 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-    <form>
+    <form action="/login" method="POST">
       <input type="text" placeholder="email" name="email" required/>
       <br>
       <br>
       <input type="password" placeholder="passowrd" name="password" required/>
+      <br>
+      <br>
+      <button>Submit</button>
     </form>
   </div>
 </div>
