--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -13,7 +13,7 @@
       <input type="text" placeholder="email" name="email" required/>
       <br>
       <br>
-      <input type="password" placeholder="passowrd" name="password" required/>
+      <input type="password" placeholder="password" name="password" required/>
       <br>
       <br>
       <button>Submit</button>
@@ -34,10 +34,13 @@
       <input type="text" placeholder="Last Name" name="last_name" required/>
       <br>
       <br>
-      <input type="text" placeholder="email" name="email">
+      <input type="text" placeholder="Email" name="email" required/>
       <br>
       <br>
-      <input type="password" placeholder="passowrd" name="password">
+      <input type="text" placeholder="City" name="city" required/>
+      <br>
+      <br>
+      <input type="password" placeholder="passowrd" name="password" required/>
       <br>
       <br>
       <button>Submit</button>
