--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,15 +1,17 @@
-<div class="footer">
-  <div class="footer-links">
-    <a href="/help">Help</a>
-    <a href="/about-us">About Us</a>
-    <a href="/contact">Contact</a>
-    <a href="/privacy-policy">Privacy Policy</a>
-    <a href="/terms-conditions">Terms & Conditions</a>
-  </div>
-  <!-- <div class="footer-links">
-    <a href="#"><img class="footer-twitter-icon icons" src="../../../images/twitter.png"></a>
-    <a href="#"><img class="footer-instagram-icon icons" src="../../../images/instagram.png"></a>
-    <a href="#"><img class="footer-facebook-icon icons" src="../../../images/facebook.png"></a>
-  </div> -->
-</div>
-<script type="text/javascript" src="/script.js"></script>
+    <div class="footer">
+      <div class="footer-links">
+        <a href="/help">Help</a>
+        <a href="/about-us">About Us</a>
+        <a href="/contact">Contact</a>
+        <a href="/privacy-policy">Privacy Policy</a>
+        <a href="/terms-conditions">Terms & Conditions</a>
+      </div>
+      <!-- <div class="footer-links">
+        <a href="#"><img class="footer-twitter-icon icons" src="../../../images/twitter.png"></a>
+        <a href="#"><img class="footer-instagram-icon icons" src="../../../images/instagram.png"></a>
+        <a href="#"><img class="footer-facebook-icon icons" src="../../../images/facebook.png"></a>
+      </div> -->
+    </div>
+    <script type="text/javascript" src="script.js"></script>
+  </body>
+</html>
