--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -18,7 +18,7 @@
   <br>
 
   <div class="page-container">
-    <form action="/signup" method="GET">
+    <form action="/splash" method="GET">
     <button>Take Me Back to the Login Page</button>
     </form>
   </div>
