--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -12,6 +12,6 @@
         <a href="#"><img class="footer-facebook-icon icons" src="../../../images/facebook.png"></a>
       </div> -->
     </div>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="/script.js"></script>
   </body>
 </html>
