--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -1,5 +1,7 @@
 <div class="nav">
   <button class="nav-link login-button">Log In</a>
+  <a href="/logout"><button class="nav-link logout-button">Log Out</a> 
+ 
 </div>
 
 <!--LOGIN Modal -->
