add edit-profile views and route

--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -1,24 +1,26 @@
 <div class="nav">
-  <button class="nav-link login-button">Log In</a>
-  <a href="/logout"><button class="nav-link logout-button">Log Out</a> 
- 
+    <%if (!session) { %>
+      <button class="nav-link login-button">Log In</button>
+      <!--LOGIN Modal -->
+      <div class="login-modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+          <span class="close">&times;</span>
+          <form action="/login" method="POST">
+            <input type="text" placeholder="email" name="email" required/>
+            <br>
+            <br>
+            <input type="password" placeholder="password" name="password" required/>
+            <br>
+            <br>
+            <button>Submit</button>
+          </form>
+        </div>
+      
+        <p>Don't have an account yet? <a href="splash.ejs">Sign Up Here</a></p>
+      </div>
+    <% } else {%>
+    <a href="/logout"><button class="nav-link logout-button">Log Out</a> 
+  <% } %>
 </div>
 
-<!--LOGIN Modal -->
-<div class="login-modal">
-<!-- Modal content -->
-<div class="modal-content">
-    <span class="close">&times;</span>
-    <form action="/login" method="POST">
-      <input type="text" placeholder="email" name="email" required/>
-      <br>
-      <br>
-      <input type="password" placeholder="password" name="password" required/>
-      <br>
-      <br>
-      <button>Submit</button>
-    </form>
-  </div>
-
-  <p>Don't have an account yet? <a href="splash.ejs">Sign Up Here</a></p>
-</div>
