--- a/src/views/profiles.ejs
+++ b/src/views/profiles.ejs
@@ -1,7 +1,7 @@
 <% include partials/header %>
 <% include partials/nav %>
 
-<a href="edit-profile/<%= user_id %>"<button class="edit-profile">Edit Profile</button></a>
+<a href="<%= user_id %>/edit-profile/"<button class="edit-profile">Edit Profile</button></a>
 <h1>
   Hello,
   <% if(name) { %>
