add edit profile and save functionality

--- a/src/views/edit-profile.ejs
+++ b/src/views/edit-profile.ejs
@@ -2,7 +2,7 @@
   <% include partials/nav %>
 
   
-  <form>  
+  <form class="edit-profile">  
     <button class="save-profile-button" type="submit">Save</button> <br>
 
     <input class="update-profile-field first-name-input" type="text" name="first_name" value="<%= first_name %>" data-user-id="<%= user_id %>"><br>
