--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -1,4 +1,5 @@
 <div class="nav">
+  <% console.log(session) %>
     <%if (!session) { %>
       <button class="nav-link login-button">Log In</button>
       <!--LOGIN Modal -->
