--- a/src/views/edit-profile.ejs
+++ b/src/views/edit-profile.ejs
@@ -5,12 +5,12 @@
   <form class="edit-profile">  
     <button class="save-profile-button" type="submit">Save</button> <br>
 
-    <input class="update-profile-field first-name-input" type="text" name="first_name" value="<%= first_name %>" data-user-id="<%= user_id %>"><br>
-    <input class="update-profile-field last-name-input" type="text" name="last_name" value="<%= last_name %>" data-user-id="
+    <input class="update-profile-field first-name-input" type="text" name="first_name" value="<%= first_name %>" data-original="<%= first_name %>" data-user-id="<%= user_id %>"><br>
+    <input class="update-profile-field last-name-input" type="text" name="last_name" value="<%= last_name %>" data-orginal="<%= last_name %>" data-user-id="
+    <%= user_id %>"><br>  
+    <input class="update-profile-field email-input" type="text" name="email" value="<%= email %>" data-original="<%= email %>" data-user-id="
     <%= user_id %>"><br>
-    <input class="update-profile-field email-input" type="text" name="email" value="<%= email %>" data-user-id="
-    <%= user_id %>"><br>
-    <input class="update-profile-field city-input" type="text" name="city" value="<%= city %>" data-user-id="
+    <input class="update-profile-field city-input" type="text" name="city" value="<%= city %>" data-original="<%= city %>" data-user-id="
     <%= user_id %>"><br>
   </form>
 
