--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,7 +3,7 @@
   <head>
     <title>ROAM</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
   </head>
   <body>
     <h1>ROAM</h1>
