add middleware to index.js routes and http.get to api

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,4 +1,8 @@
 <% include partials/header %>
 <% include partials/nav %>
 <h1>Home</h1>
+  <form action="/getDoctor" method="POST">
+    <input type="text" placeholder="Enter Doctor's Name" name="doctorsName">
+    <button type="submit">SUBMIT</button>
+  </form>
 <% include partials/footer %>
