--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,10 @@
 body {
   display: flex;
   min-height: 100vh;
-  flex-direction: column
+  flex-direction: column;
+  flex: 1 0 auto;
 }
+
 
 .container {
   width: 100%;
