--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,8 +5,116 @@ body {
   flex: 1 0 auto;
 }
 
+input {
+  width: 400px;
+  height: 30px; 
+  border-radius: 4px; 
+  border: none;  
+}
+
+.header-top {
+  display: flex; 
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+
+.signup-button {
+  background-color: transparent; 
+  border: solid 3px #91C8FF;
+  border-radius: 6px;
+}
+
+.login-button {
+  background-color: transparent;
+  border: none; 
+
+}
+
+/* .hospital-star {
+  height: 50%;
+} */
+
+.nav-button-text {
+  color: #91C8FF;
+}
+
+.icon {
+  color: #fff;
+}
+
+.splash-search {
+  display: flex;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  margin-top: -500px;
+}
+ 
+.splash-head-image {
+  width: 100%; 
+}
+
+.splash-nav {
+  position: absolute;
+  top: 50px;
+  right: 50px;
+  z-index: 1;
+  width: 200px; 
+}
+
+.first-review-button {
+  background-color:#91C8FF; 
+  border: #979797;
+  color: #fff; 
+  width: 350px; 
+  height: 60px;
+  border-radius: 6px; 
+  font-family: 'Lato', 
+  sans-serif;
+  font-size: 25px;
+  }
+
+.splash-h1 {
+  font-family: 'Lato', 
+  sans-serif;
+  color: #374051;
+  font-weight: 900;
+  font-size: 48pt; 
+}
+
+.splash-subheading {
+  font-family: 'Lato',
+  sans-serif;
+  font-weight: normal; 
+  color: #374051;
+  font-size: 30pt;
+
+}
+.help-the-community-section {
+  display: flex; 
+  margin-top: 500px; 
+}
+
+.search-button {
+  height: 30px; 
+  border-radius: 6px; 
+  background-color: #91C8FF;
+}
+
+.browse-by-field {
+  /* display: flex;  */
+  background-color: #EDEDED;
+}
+
+.field-images{
+  width: 100px; 
+  height: 100px;
+  position: relative; 
+}
 
 .container {
+  position: relative;
   width: 100%;
   flex: 1;
 }
@@ -15,18 +123,18 @@ body {
   box-sizing:border-box;
 }
 
-.slideshow-container {
+/* .slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
-}
+} */
 
-.mySlides {
+/* .mySlides {
     display: none;
-}
+} */
 
 
-.dot {
+/* .dot {
   cursor:pointer;
   height: 15px;
   width: 15px;
@@ -35,8 +143,8 @@ body {
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
-}
-
+} */
+/* 
 .active, .dot:hover {
   background-color: #717171;
 }
@@ -44,12 +152,12 @@ body {
 
 .slide-image {
   height: 400px;
-}
-
+} */
+/* 
 .splash-title-header {
   font-family: 'Lato', sans-serif;
   /*font-size: 50px;*/
-}
+} */
 
 .title, .title:visited {
   font-family: 'Lato', sans-serif;
@@ -59,7 +167,6 @@ body {
 }
 
 .nav {
-  background-color: #000;
   height: 30px;
   display:flex;
   justify-content: flex-end;
