--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -1,20 +1,122 @@
 <% include partials/header %>
-<form action="/signup" method="POST">
-      <input type="text" placeholder="First Name" name="first_name" required/>
-      <br>
-      <br>
-      <input type="text" placeholder="Last Name" name="last_name" required/>
-      <br>
-      <br>
-      <input type="text" placeholder="Email" name="email" required/>
-      <br>
-      <br>
-      <input type="text" placeholder="City" name="city" required/>
-      <br>
-      <br>
-      <input type="password" placeholder="passowrd" name="password" required/>
-      <br>
-      <br>
-      <button>Submit</button>
-    </form>
+<div class="signup-form">
+  <form action="/signup" method="POST">
+    <input type="text" placeholder="First Name" name="first_name" required/>
+    <br>
+    <br>
+    <input type="text" placeholder="Last Name" name="last_name" required/>
+    <br>
+    <br>
+    <input type="text" placeholder="Email" name="email" required/>
+    <br>
+    <br>
+    <select name="Bay Area Cities">
+      <option value="alameda">Alameda</option>
+      <option value="albany">Albany</option>
+      <option value="american-canyon">American Canyon</option>
+      <option value="antioch">Antioch</option>
+      <option value="atherton">Atherton</option>
+      <option value="belmont">Belmont</option>
+      <option value="belvedere">Belvedere</option>
+      <option value="benicia">Benicia</option>
+      <option value="berkeley">Berkeley</option>
+      <option value="Brentwood">Brentwood</option>
+      <option value="Brisbane">Brisbane</option>
+      <option value="burlingame">Burlingame</option>
+      <option value="calistoga">Calistoga</option>
+      <option value="campbell">Campbell</option>
+      <option value="clayton">Clayton</option>
+      <option value="cloverdale">Cloverdale</option>
+      <option value="colma">Colma</option>
+      <option value="concord">Concord</option>
+      <option value="corte">Corte</option>
+      <option value="cotati">Cotati</option>
+      <option value="cupertino">Cupertino</option>
+      <option value="daly-city">Daly City</option>
+      <option value="danville">Danville</option>
+      <option value="dixon">Dixon</option>
+      <option value="dublin">Dublin</option>
+      <option value="east-palo-alto">East Palo Alto</option>
+      <option value="el-cerrito">El Cerrito</option>
+      <option value="emeryville">Emeryville</option>
+      <option value="fairfax">Fairfax</option>
+      <option value="fairfield">Fairfield</option>
+      <option value="foster-city">Foster City</option>
+      <option value="gilroy">Gilroy</option>
+      <option value="half-moon-bay">Half Moon Bay</option>
+      <option value="hayward">Hayward</option>
+      <option value="healdsburg">Healdsburg</option>
+      <option value="hercules">Hercules</option>
+      <option value="hillsborough">Hillsborough</option>
+      <option value="lafayette">Lafayette</option>
+      <option value="larkspur">Larkspur</option>
+      <option value="livermore">Livermore</option>
+      <option value="los Altos">Los Altos</option>
+      <option value="los-altos-hills">Los Altos Hills</option>
+      <option value="los-gatos">Los Gatos</option>
+      <option value="martinez">Martinez</option>
+      <option value="menlo-park">Menlo Park</option>
+      <option value="mill-valley">Mill Valley</option>
+      <option value="millbrae">Millbrae</option>
+      <option value="milpitas">Milpitas</option>
+      <option value="monte sereno">Monte Sereno</option>
+      <option value="moraga">Moraga</option>
+      <option value="morgan-hill">Morgan Hill</option>
+      <option value="mountain-view">Mountain Viewo</option>
+      <option value="napa">Napa</option>
+      <option value="newark">Newark</option>
+      <option value="novato">Novato</option>
+      <option value="oakland">Oakland</option>
+      <option value="oakley">Oakley</option>
+      <option value="orinda">Orinda</option>
+      <option value="pacifica">Pacifica</option>
+      <option value="palo-alto">Palo Alto</option>
+      <option value="petaluma">Petaluma</option>
+      <option value="piedmont">Piedmont</option>
+      <option value="pinole">Pinole</option>
+      <option value="pleasant-hill">Pleasant Hill</option>
+      <option value="pleasanton">Pleasanton</option>
+      <option value="portola-valley">Portola Valley</option>
+      <option value="redwood-city">Redwood City</option>
+      <option value="richmond">Richmond</option>
+      <option value="rio-vista">Rio Vista</option>
+      <option value="rohnert-park">Rohnert Park</option>
+      <option value="ross">Ross</option>
+      <option value="san-anselmo">San Anselmo</option>
+      <option value="san-bruno">San Bruno</option>
+      <option value="san-carlos">San Carlos</option>
+      <option value="san-francisco">San Francisco</option>
+      <option value="san-leandro">San Leandro</option>
+      <option value="san-mateo">San Mateo</option>
+      <option value="san-pablo">San Pablo</option>
+      <option value="san-rafael">San Rafael</option>
+      <option value="san-ramon">San Ramon</option>
+      <option value="saratoga">Saratoga</option>
+      <option value="santa-rosa">Santa Rosa</option>
+      <option value="sausalito">Sausalito</option>
+      <option value="sonoma">Sonoma</option>
+      <option value="south-san-francisco">South San Francisco</option>
+      <option value="st-helena">St. Helena</option>
+      <option value="suisun-city">Suisun City</option>
+      <option value="sunnyvale">Sunnyvale</option>
+      <option value="tiburon">Tiburon</option>
+      <option value="union-city">Union City</option>
+      <option value="vacaville">Vacaville</option>
+      <option value="vallejo">Vallejo</option>
+      <option value="walnut-creek">Walnut Creek</option>
+      <option value="windsor">Windsor</option>
+      <option value="woodside">Woodside</option>
+      <option value="sebastopol">Yountville</option>
+    </select>
+    <br>
+    <br>
+    <input type="submit">
+    <br>
+    <br>
+    <input type="password" placeholder="passowrd" name="password" required/>
+    <br>
+    <br>
+    <button>Submit</button>
+  </form>
+</div>
     <% include partials/footer %>
